# benchmarking_causal_rl

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  __main__.py  causal_ppo_variants.py  get_computational_complexities.py  main.py  plot.py  plot_ablation.py  plot_causal.py  ppos.py  pyproject.toml  pytest.ini  requirements.txt  run.py  run_ablation.py  setup.cfg  setup.py
cbn/: utils.py
computational_complexities/: table_vs_nobs_ALL_inference.csv  table_vs_nobs_ALL_refit.csv
docs/: causal_cells.md  cell_mapping.md  experimental_design.md  known_issues.md  null_calibration_k.md  phase0_audit.md  rl_regimes_restructure.md
gymnasium_suite/: a2c.py  a2c_minimal.py  base.py  causal_dqn_minimal.py  causal_knowledge.py  causality_hyperparams.yaml  dqn.py  dqn_minimal.py  ppo.py  ppo_minimal.py  run.py  sac.py  utils.py
new_vbn/: __init__.py  core.py  io.py  utils.py
outputs/: matrix_summary.csv  matrix_summary_continuous.csv
reproducibility/: cell9_comparison.yaml  comoreai26.yaml  quick_comparison.yaml
src/: ablation.py  base.py  benchmark.py  empiricalchecks.py  plot_empirical_check.py  plotting.py  utils.py
tests/: _oracle_u_reference.py  _phase0_seed_probe.py  _proximal_scalar_reference.py  conftest.py  test_abstractions.py  test_action_dep_confounder_gate_b.py  test_actor_critic_separate_trunks.py  test_arms_and_online_gate.py  test_atari_offline.py  test_aux_models.py  test_bcq_continuous.py  test_can_sample.py  test_characterization.py  test_checkpoints.py  test_cnn.py  test_collection_policies.py  test_confounded_collection.py  test_confounded_wrapper_repro.py  test_confounding_gate.py  test_critic_ablation_recurrent_row.py  test_curiosity_collection.py  test_dataset_guard.py  test_declarative_confounder_gate.py  test_estimators.py  test_eval_per_context.py  test_kallus_zhou.py  test_marginally_matched_confounder.py  test_masked_wrapper.py  test_masking.py  test_minigrid.py  test_off_policy_recurrent_bptt.py  test_off_policy_recurrent_collection.py  test_off_policy_recurrent_pomdp.py  test_offline.py  (+49 more)
(+458 files in other folders)
